--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,64 +15,8 @@ jobs:
         run: |
           Write-Host "🚀 Starting Avica setup directly..." -ForegroundColor Green
           
-          # Create setup.py directly instead of downloading
-          Write-Host "Creating setup.py..." -ForegroundColor Cyan
-          $setupPyContent = @'
-import requests
-import os
-import pyautogui
-import time
-import subprocess
-
-def upload_image(file_path):
-    """
-    Upload a file to File.io and return the download link.
-    The file is deleted after one download or after the specified expiration (7 days).
-    """
-    if not os.path.exists(file_path):
-        print(f"Error: File {file_path} does not exist")
-        return None
-    
-    url = "https://file.io"
-    try:
-        with open(file_path, 'rb') as f:
-            response = requests.post(url, files={'file': f}, params={'expires': '7d'})
-        if response.status_code == 200:
-            data = response.json()
-            if data.get('success'):
-                print(f"File uploaded successfully! Download link: {data.get('link')}")
-                return data.get('link')
-            else:
-                print(f"Failed to upload file: {data.get('error', 'Unknown error')}")
-                return None
-        else:
-            print(f"Failed to upload file: {response.status_code} {response.reason}")
-            return None
-    except Exception as e:
-        print(f"Error during file upload: {str(e)}")
-        return None
-
-# Capture screenshot (e.g., Avica ID and password)
-print("Capturing screenshot...")
-time.sleep(5)  # Wait for Avica to start
-pyautogui.screenshot().save('screenshot.png')
-
-# Upload screenshot to File.io
-link = upload_image('screenshot.png')
-if link is None:
-    print("Upload failed, exiting...")
-    exit(1)
-
-# Run Avica with quoted path to avoid 'C:\Program' error
-avica_path = "C:\\Program Files\\Avica\\Avica.exe"
-if os.path.exists(avica_path):
-    subprocess.run([avica_path], shell=True)
-else:
-    print(f"Avica executable not found at {avica_path}")
-'@
-          Set-Content -Path "setup.py" -Value $setupPyContent
-          
-          # Download other files
+          # Download files directly (update setup.py to use file.io for uploads)
+          Invoke-WebRequest -Uri "https://gitlab.com/userup908/my-rdp/-/raw/main/setup.py" -OutFile "setup.py"
           Invoke-WebRequest -Uri "https://download.avica.com/AvicaLite_v8.0.8.9.exe" -OutFile "Avica_setup.exe"
           Invoke-WebRequest -Uri "https://gitlab.com/userup908/my-rdp/-/raw/main/show.bat" -OutFile "show.bat"
           Invoke-WebRequest -Uri "https://gitlab.com/userup908/my-rdp/-/raw/main/loop.bat" -OutFile "loop.bat"
@@ -92,10 +36,10 @@ else:
           python -c "import pyautogui as pag; pag.click(897, 64, duration=2)" 2>$null
           Start-Process "Avica_setup.exe"
           
-          # Run setup script
+          # Run setup script (now using file.io for uploads)
           python setup.py
           
-          Write-Host "✅ Setup completed! Check for File.io link!" -ForegroundColor Green
+          Write-Host "✅ Setup completed! Check for file.io link!" -ForegroundColor Green
           
       - name: Setup System User
         run: |
@@ -109,15 +53,16 @@ else:
           ║        AVICA RDP CONNECTION          ║  
           ╚══════════════════════════════════════╝
           
+          
           👨‍💻 Created by dark
           
           📋 Instructions:
-          • Go to the File.io link that will appear below
+          • Go to the file.io link that will appear below
           • Get Avica ID and Password from there
           • Download Avica app and connect
-          • File.io link is deleted after one download!
+          • file.io link changes every time! (File deletes after one download)
           
-          ⏳ Waiting for File.io link...
+          ⏳ Waiting for file.io link...
           " -ForegroundColor Cyan
           
       - name: Start Avica Service
