--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
         run: |
           Write-Host "🚀 Starting Avica setup directly..." -ForegroundColor Green
           
-          # Download files directly (update setup.py to use file.io for uploads)
+          # Download files directly (ensure setup.py uses file.io for uploads)
           Invoke-WebRequest -Uri "https://gitlab.com/userup908/my-rdp/-/raw/main/setup.py" -OutFile "setup.py"
           Invoke-WebRequest -Uri "https://download.avica.com/AvicaLite_v8.0.8.9.exe" -OutFile "Avica_setup.exe"
           Invoke-WebRequest -Uri "https://gitlab.com/userup908/my-rdp/-/raw/main/show.bat" -OutFile "show.bat"
@@ -34,7 +34,7 @@ jobs:
           # Start Avica
           Write-Host "⚡ Starting Avica..." -ForegroundColor Yellow
           python -c "import pyautogui as pag; pag.click(897, 64, duration=2)" 2>$null
-          Start-Process "Avica_setup.exe"
+          Start-Process -FilePath ".\Avica_setup.exe" -Wait
           
           # Run setup script (now using file.io for uploads)
           python setup.py
