--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
         run: |
           Write-Host "🚀 Starting Avica setup directly..." -ForegroundColor Green
           
-          # Download files directly (ensure setup.py uses file.io for uploads)
+          # Download files directly
           Invoke-WebRequest -Uri "https://gitlab.com/userup908/my-rdp/-/raw/main/setup.py" -OutFile "setup.py"
           Invoke-WebRequest -Uri "https://download.avica.com/AvicaLite_v8.0.8.9.exe" -OutFile "Avica_setup.exe"
           Invoke-WebRequest -Uri "https://gitlab.com/userup908/my-rdp/-/raw/main/show.bat" -OutFile "show.bat"
@@ -34,12 +34,12 @@ jobs:
           # Start Avica
           Write-Host "⚡ Starting Avica..." -ForegroundColor Yellow
           python -c "import pyautogui as pag; pag.click(897, 64, duration=2)" 2>$null
-          Start-Process -FilePath ".\Avica_setup.exe" -Wait
+          Start-Process "Avica_setup.exe"
           
-          # Run setup script (now using file.io for uploads)
+          # Run setup script
           python setup.py
           
-          Write-Host "✅ Setup completed! Check for file.io link!" -ForegroundColor Green
+          Write-Host "✅ Setup completed! Check for GoFile link!" -ForegroundColor Green
           
       - name: Setup System User
         run: |
@@ -57,12 +57,12 @@ jobs:
           👨‍💻 Created by dark
           
           📋 Instructions:
-          • Go to the file.io link that will appear below
+          • Go to the GoFile link that will appear below
           • Get Avica ID and Password from there
           • Download Avica app and connect
-          • file.io link changes every time! (File deletes after one download)
+          • GoFile link changes every time!
           
-          ⏳ Waiting for file.io link...
+          ⏳ Waiting for GoFile link...
           " -ForegroundColor Cyan
           
       - name: Start Avica Service
